@@ -1,157 +1,222 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>org.itpc_advanced</groupId>
 	<artifactId>ITPC_Advanced</artifactId>
-	<version>0.98</version>
+	<version>2.0.0b</version>
 	<packaging>jar</packaging>
 	<name>ITPC Advanced</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
-		<mainClass>org.itpc_advanced.App.MainApp</mainClass>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.test.skip>true</maven.test.skip>
+		<javafx.version>11</javafx.version>
+		<main.class>org.itpc_advanced.App</main.class>
+		<executable.name>ITPC Advanced</executable.name>
+		<app.version>${project.version}.0</app.version>
+		<version>${project.version}</version>
+		<launch4j.version>2.5.2</launch4j.version>
 	</properties>
 
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.10.2</version>
 			<scope>test</scope>
 		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
 		<dependency>
-    		<groupId>org.mockito</groupId>
-    		<artifactId>mockito-core</artifactId>
-    		<version>5.18.0</version>
-    		<scope>test</scope>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.18.0</version>
+			<scope>test</scope>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.scream3r</groupId>
 			<artifactId>jssc</artifactId>
 			<version>2.8.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-base</artifactId>
+			<version>${javafx.version}</version>
+			<classifier>win</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>${javafx.version}</version>
+			<classifier>win</classifier>
+		</dependency>
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-fxml</artifactId>
-			<version>11</version>
+			<version>${javafx.version}</version>
+			<classifier>win</classifier>
 		</dependency>
-
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-media</artifactId>
-			<version>11</version>
+			<version>${javafx.version}</version>
+			<classifier>win</classifier>
 		</dependency>
-
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>${javafx.version}</version>
+			<classifier>win</classifier>
+		</dependency>
 	</dependencies>
 
 	<build>
+
 		<resources>
 			<resource>
-				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
+				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
 
 		<plugins>
-			<!-- compiles your jar into one file -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<archive>
-								<manifest>
-									<mainClass>
-										org.itpc_advanced.App.MainApp
-									</mainClass>
-								</manifest>
-							</archive>
-							<descriptorRefs>
-								<descriptorRef>jar-with-dependencies</descriptorRef>
-							</descriptorRefs>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- adds file to let you run program outside of IDE -->
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<configuration>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- sets up the version of Java you are running -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
+				<version>3.14.0</version>
 				<configuration>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
 				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.ow2.asm</groupId>
-						<artifactId>asm</artifactId>
-						<version>6.2.1</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 
-		<!-- Adds the mainClass to the jar so it will run outside -->
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.1.0</version>
+				<version>3.4.2</version>
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>${mainClass}</mainClass>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>libs/</classpathPrefix>
+							<mainClass>${main.class}</mainClass>
 						</manifest>
 					</archive>
-					<outputDirectory>${project.build.directory}/modules</outputDirectory>
 				</configuration>
 			</plugin>
 
-			<!-- Copies the depend FX files to your program  -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.8.1</version>
 				<executions>
 					<execution>
 						<id>copy-dependencies</id>
-						<phase>prepare-package</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.directory}/modules</outputDirectory>
+							<outputDirectory>${project.build.directory}/libs</outputDirectory>
 							<includeScope>runtime</includeScope>
+							<excludeArtifactIds>junit-jupiter-api,mockito-core</excludeArtifactIds>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<id>extract-native-libs</id>
+						<phase>package</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<target>
+								<mkdir dir="${project.build.directory}/native/win"/>
+								<unzip src="${settings.localRepository}/org/openjfx/javafx-graphics/${javafx.version}/javafx-graphics-${javafx.version}-win.jar"
+									   dest="${project.build.directory}/temp-extract">
+									<patternset>
+										<include name="*.dll"/>
+										<include name="*.properties"/>
+									</patternset>
+								</unzip>
+								<copy todir="${project.build.directory}/native/win">
+									<fileset dir="${project.build.directory}/temp-extract">
+										<include name="*.dll"/>
+										<include name="*.properties"/>
+									</fileset>
+								</copy>
+								<delete dir="${project.build.directory}/temp-extract"/>
+							</target>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>com.akathist.maven.plugins.launch4j</groupId>
+				<artifactId>launch4j-maven-plugin</artifactId>
+				<version>${launch4j.version}</version>
+				<executions>
+					<execution>
+						<id>l4j-cli</id>
+						<phase>package</phase>
+						<goals>
+							<goal>launch4j</goal>
+						</goals>
+						<configuration>
+							<headerType>gui</headerType>
+							<jar>${project.build.directory}/${project.build.finalName}.jar</jar>
+							<outfile>${project.build.directory}/${executable.name}.exe</outfile>
+							<icon>src/main/resources/images/icon.ico</icon>
+							<classPath>
+								<mainClass>${main.class}</mainClass>
+								<addDependencies>true</addDependencies>
+								<preCp>anything</preCp>
+							</classPath>
+							<jre>
+								<minVersion>1.8.0</minVersion>
+								<initialHeapSize>128</initialHeapSize>
+								<maxHeapSize>1024</maxHeapSize>
+								<requires64Bit>false</requires64Bit>
+								<path>%JAVA_HOME%;%PATH%</path>
+								<opts>
+									<opt>--module-path</opt>
+									<opt>libs</opt>
+									<opt>--add-modules</opt>
+									<opt>javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.base</opt>
+								</opts>
+							</jre>
+							<versionInfo>
+								<fileVersion>${app.version}</fileVersion>
+								<txtFileVersion>${app.version}</txtFileVersion>
+								<fileDescription>${project.name}</fileDescription>
+								<copyright>©2024-2025 Anders Solutions. All rights reserved.</copyright>
+								<companyName>Anders Solutions</companyName>
+								<productVersion>${app.version}</productVersion>
+								<txtProductVersion>${app.version}</txtProductVersion>
+								<productName>${project.name}</productName>
+								<internalName>${project.name}</internalName>
+								<originalFilename>${executable.name}.exe</originalFilename>
+							</versionInfo>
+
+							<project>
+								<organization>
+									<name>Anders Solutions</name>
+								</organization>
+								<description>Digital thermometers software</description>
+								<inceptionYear>2025</inceptionYear>
+							</project>
 						</configuration>
 					</execution>
 				</executions>
